<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

    <TextView
        android:id="@+id/geoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/my_primary_text"
        android:textSize="22sp"
        android:layout_gravity="center"
        android:text="@string/search_engine" />
        
    <Spinner
        android:id="@+id/geoSpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/geoLocation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLines="1"
        android:hint="@string/location" />
    
    <Button
        android:id="@+id/geoOk"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/search_location" />

</LinearLayout>


