<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

    <TextView
        android:id="@+id/addrText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/my_primary_text"
        android:textSize="22sp"
        android:layout_gravity="center"
        android:text="@string/add_address" />
    
    <Spinner
        android:id="@+id/addrSpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/addrLine1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLines="1"
        android:hint="@string/title" />
    
    <EditText
        android:id="@+id/addrLine2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLines="1"
        android:hint="@string/add_text" />
    
    <EditText
        android:id="@+id/addrLine3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLines="1"
        android:hint="@string/add_text" />
    
    <EditText
        android:id="@+id/addrLine4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLines="1"
        android:hint="@string/add_text" />
    
    <Button
        android:id="@+id/addrOk"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add_address" />

</LinearLayout>


