<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/nav_settings_to_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="@color/my_primary"
    android:fontFamily="sans-serif"
    android:visibility="invisible">

    <!--header-->
    <RelativeLayout
        android:id="@+id/nav_settings_to_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp"
        >

        <ImageView
            android:id="@+id/header_image_view_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:padding="8dp"
            android:src="@drawable/ic_location_start_white_24dp"
            />

        <TextView
            android:id="@+id/map_nav_settings_to_local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/header_image_view_to"
            android:text="@string/to_location"
            android:textColor="@color/my_divider"
            android:textSize="16sp"/>

        <ImageButton
            android:id="@+id/nav_settings_to_clear_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:focusable="true"
            android:padding="8dp"
            android:src="@drawable/ic_keyboard_arrow_down_white_24dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/header_image_view_to"
            android:layout_marginTop="8dp"
            android:background="@color/my_divider"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/map_nav_settings_to_favorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nav_settings_to_header"
        android:gravity="left|center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:padding="8dp"
            android:src="@drawable/ic_star_outline_white_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_from_favorite"
            android:textSize="14sp"/>
    </LinearLayout>

    <!--point on map-->
    <LinearLayout
        android:id="@+id/map_nav_settings_to_point"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/map_nav_settings_to_favorite"
        android:gravity="left|center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:padding="8dp"
            android:src="@drawable/ic_filter_center_focus_white_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/point_on_map"
            android:textSize="14sp"/>

    </LinearLayout>

    <!-- current location-->
    <LinearLayout
        android:id="@+id/map_nav_settings_to_current"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/map_nav_settings_to_point"
        android:gravity="left|center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:padding="8dp"
            android:src="@drawable/ic_my_location_white_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_current_location"
            android:textSize="14sp"/>
    </LinearLayout>

    <!-- search location-->
    <LinearLayout
        android:id="@+id/map_nav_settings_to_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/map_nav_settings_to_current"
        android:gravity="left|center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:padding="8dp"
            android:src="@drawable/ic_search_white_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_location"
            android:textSize="14sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/map_nav_settings_to_latlon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/map_nav_settings_to_search"
        android:gravity="left|center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:padding="8dp"
            android:src="@drawable/ic_space_bar_white_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_lat_lon"
            android:textSize="14sp"/>

    </LinearLayout>

</RelativeLayout>
